<resources>
    <string name="app_name">FavSports</string>
    <string name="article_title">Article Title</string>
    <string name="profile_sign_in_btn">Sign In</string>
    <string name="profile_sign_up_btn">Sign Up</string>
    <string name="register_create_a_new_account_text">Create a New Account</string>
    <string name="register_name_text">Name</string>
    <string name="register_email_text">Email</string>
    <string name="register_password_text">Password</string>
    <string name="register_create_account_btn">Create Account</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_btn">Login</string>
    <string name="profile_logout_btn">Logout</string>

</resources>
